--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,15 +4,15 @@
   description: Founded and leading a monthly interdisciplinary academic group inspired by Norbert Wiener’s project on cybernetics, bringing together graduate students from philosophy, neuroscience, linguistics, computer science, physics, and education. The group explores fundamental questions about thinking, meaning, and intelligence through collaborative discussions and projects.
 
 - role: Research Intern
-  company: KAIST LK Lab
+  company: "KAIST LK Lab (Advisor: Minjoon Seo)"
   year: Feb 2022 - Aug 2022
 
 - role: Research Intern
-  company: SNU LDI Lab
+  company: "SNU LDI Lab (Advisor: Seung-won Hwang)"
   year: Sep 2021 - Jan 2022
 
 - role: Research Intern
-  company: SNU CHANGLab
+  company: "SNU CHANGLab (Advisor: Hyeshik Chang)"
   year: Dec 2020 - Feb 2021
 
 - role: Undergraduate Researcher
